2003-02-01  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03721] PATH_INFO support of local CGI
	* local.c (CGIFN_DROOT): deleted
		(CGIFN_LIBDIR): added
		(CGIFN_MODE): deleted
		(CGIFN_CONTAIN_SLASH): deleted
		(check_local_cgi): rewrite
		(cgi_filename): rewrite
		(localcgi_post): support PATH_INFO
	* url.c (openURL): rewrite
	* Bonus/smb.cgi: use PATH_INFO

2003-02-01  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03720] mark remains
	* main.c (srchcore): PREC_NUM

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03719] Re: Too slow when loading big file with fold_line=1
	* file.c (addnewline): check i <l->len

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03718] Too slow when loading big file with fold_line=1
	* etc.c (nextColumn): added
		(calcPosition): use New_N
				rewrite with nextColumn
		(columnLen): added
	* file.c (addnewline): rewrite with columnLen
	* proto.h (columnLen): added

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03717] print newline before exec shell command.
	* main.c (execsh): print newline

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03715] initial currentLine when pager mode.
	* file.c (getNextPage): fix cur

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03714] -cols 1 -dump -o fold_line=1
	* file.c (addnewline): check i == 0, i == l->len
	* fm.h (_INIT_BUFFER_WIDTH): added
		(INIT_BUFFER_WIDTH): use _INIT_BUFFER_WIDTH

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03713] search with "$"
	* search.c (forwardSearch): check l->next && l->next->bpos
		(backwardSearch): check l->size, l->next && l->next->bpos

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03712] buf fix of LINE_INFO
	* main.c (curlno): rewrite

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03709] Re: view source, edit source