@@ -1,3 +1,9 @@
+2003-02-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03724] Re: view source, edit source
+	* buffer.c (reshapeBuffer): initialize buf->width first
+	* display.c (displayBuffer): no need to check buf>sourcefile
+
 2003-02-01  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03721] PATH_INFO support of local CGI
@@ -7008,4 +7014,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.734 2003/01/31 16:25:02 ukai Exp $
+$Id: ChangeLog,v 1.735 2003/02/03 15:49:13 ukai Exp $
